<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="alireza.nezami.resume.presentation.career.CareerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.DarkTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".presentation.career.CareerFragment">

        <alireza.nezami.resume.presentation.utils.StepIndicator
            android:id="@+id/step_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:siBackgroundColor="@color/background_default"
            app:siStepColor="@color/step_default"
            app:siStepCount="5" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/step_indicator"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <com.google.android.material.textfield.TextInputLayout
                    error='@{viewModel.validator.getValidation("objective")}'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:counterMaxLength="1000">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:hint="@string/career_objective"
                        android:inputType="textCapSentences|textMultiLine"
                        android:lines="5"
                        android:maxLength="1000"
                        android:minLines="5"
                        android:text="@={viewModel.career.objective}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    error='@{viewModel.validator.getValidation("exp")}'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Theme.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_years_of_experience"
                        android:inputType="number"
                        android:text="@={``+viewModel.career.exp}" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/Theme.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/skill"
                            android:inputType="text"
                            android:text="@={viewModel.career.skillName}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/Theme.Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.addSkill()}"
                        android:text="@string/add_skill" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/Theme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.validateAll()}"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>